<resources>
    <string name="app_name">ANDR1_Group_8</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_people">People</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="students">Students</string>
    <string name="teachers">Teachers</string>
    <string name="people">People</string>
    <string name="search_hold_for_advanced_search">Search (hold for advanced search)</string>
    <string name="home">HOME</string>
    <string name="schedule">schedule</string>
    <string name="view_people">View People</string>
    <string name="change_class">Change class</string>
    <string name="e_b71">E-B71</string>
    <string name="people_photo">people_photo</string>
    <string name="people_icon">people_icon</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="welcome">Welcome</string>
    <string name="login">login</string>
    <string name="service">Service</string>
    <string name="todo">TODO</string>
    <string name="this_weeks_schedule">This weeks schedule</string>
    <string name="view_calendar">View Calendar</string>
    <string name="fontysimage">fontysimage</string>
    <string name="fontyslogo">fontyslogo</string>
    <string name="welcome_to_fontys_companion_app">Welcome to Fontys Companion App!</string>
    <string name="title">Title</string>
    <string name="thumbnail">thumbnail</string>
    <string name="textview">TextView</string>
    <string name="news">NEWS</string>
    <string name="dashboard">Dashboard</string>
    <string name="background">background</string>
</resources>